# Medicon

./: .gitignore  README.md  postgres.txt
assets/: postgresql_client.txt
assets/app-data/provider/: provider.xml
assets/app-data/provider/sql-applets/: company_count.xml  company_delete.xml  company_insert.xml  company_select.xml  company_select_by_uid.xml  company_update.xml  illnessgroup_name_update.xml  illnessgroup_select.xml
source/: SECURITY_AUDIT_2026-01-31.md
source/backend/cmake/: global-settings.cmake
source/backend/grpc/: company_server.hpp
source/backend/include/: XmlDataGenerator.cpp  XmlDataGenerator.h  include_backend_util.cpp  include_backend_util.h  sqlapplet.cpp  sqlapplet.h  sqlcommand.h  sqlconnection.cpp
source/backend/include/tests/: CMakeLists.txt  SQLAppletTests.cpp  conanfile.py
source/backend/provider/: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
source/backend/provider/connection_tests/: CMakeLists.txt  ConnectionTests.cpp
source/backend/provider/integration_tests/: CMakeLists.txt  ConfigFileIntegrationTests.cpp
source/backend/provider/tests/: CMakeLists.txt  ConfigFIleTests.cpp  ConfigFileIntegrationTests.cpp  SentryTests.cpp  TypeToStringFormatterTests.cpp  test.cpp
source/backend/provider/unit_tests/: CMakeLists.txt  ConfigFileIntegrationTests.cpp  SentryTests.cpp
source/backend/providerQt/: CMakeLists.txt  main.cpp
source/backend/source/: include_backend_util.cpp  include_backend_util.h  sqlapplet.cpp  sqlapplet.h  sqlcommand.cpp  sqlcommand.h  sqlconnection.cpp  sqlconnection.h  sqlquery.cpp  sqlquery.h
source/backend/source/tests/: CMakeLists.txt  SQLAppletTests.cpp  SaBinaryTests.cpp  SqlAppletTests.cpp  SqlCommandIntegrationTests.cpp  SqlCommandTests.cpp  SqlConnectionIntegrationTests.cpp  SqlConnectionTests.cpp  SqlQueryIntegrationTests.cpp  SqlQueryTests.cpp  conanfile.py
source/backend/source/tests/app-data/: NoCodeApplet.xml  NoDescApplet.xml  NoNameParam.xml  NoTypeParam.xml  insert_user_test.xml  test.xml
source/cmake/: common.grpc.cmake  global-settings.cmake
source/frontend/ProviderDesktop/: CMakeLists.txt
source/frontend/ProviderDesktop/integration_tests/: CMakeLists.txt  GrpcCompanyTableModelTests.cpp  GrpcCompanyTests.cpp  GrpcObjectTableModelTests.cpp
source/frontend/grpc/: company_client.hpp
source/frontend/grpc/tests/: CMakeLists.txt  GrpcCompanyTests.cpp  GrpcTests.cpp  conanfile.py  front_common.h
source/frontend/include/: qreportgenerator.h
source/frontend/source/: Frontend.qrc  GrpcDataContainer.hpp  GrpcDataControler.hpp  GrpcDateTimeEditReadOnlyStyler.h  GrpcForm.cpp  GrpcForm.h  GrpcImagePickerWidget.cpp  GrpcImagePickerWidget.h  GrpcMasterSlaveController.cpp  GrpcMasterSlaveController.h  GrpcObjectTableModel.cpp  GrpcObjectTableModel.h  GrpcObjectWrapper.hpp  GrpcProxySortFilterModel.cpp  GrpcProxySortFilterModel.h  GrpcSearchForm.cpp  GrpcSearchForm.h  GrpcTableView.cpp  GrpcTableView.h  GrpcTemplateController.cpp  GrpcTemplateController.h  GrpcThreadWorker.cpp  GrpcThreadWorker.h  GrpcUiTemplate.cpp  GrpcUiTemplate.h  GrpcViewNavigator.cpp  GrpcViewNavigator.h  TestSharedUtility.cpp  TestSharedUtility.h  include_frontend_util.cpp  include_frontend_util.h  qreportgenerator.cpp
source/frontend/source/ItemModelTestUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  TestDataSource.cpp  TestDataSource.h
source/frontend/source/ModelItems/: CompanyDataModel.cpp  CompanyDataModel.h  CompanyTableModel.cpp  CompanyTableModel.h
source/frontend/source/tests/: CMakeLists.txt  GrpcDataContainerTests.cpp  GrpcFormTests.cpp  GrpcImagePickerWidgetTests.cpp  GrpcLoaderTests.cpp  GrpcMasterSlaveControllerTests.cpp  GrpcMasterSlaveIntegrationTests.cpp  GrpcObjectTableModelTests.cpp  GrpcObjectWrapperTests.cpp  GrpcTemplateControllerTests.cpp  GrpcViewNavigatorTests.cpp  IncludeFrontendUtilTests.cpp  TestSharedUtilityTests.cpp  conanfile.py
source/grpc/cpp-source/: CMakeLists.txt  company.grpc.pb.cc  company.grpc.pb.h  company.pb.cc  company.pb.h
source/grpc/cpp-source/company/: CMakeLists.txt
source/grpc/protos/: company.proto
source/include/: TypeToStringFormatter.cpp  TypeToStringFormatter.h  XmlDataGenerator.cpp  XmlDataGenerator.h  configfile.cpp  configfile.h  include_util.cpp  include_util.h
source/include/tests/: CMakeLists.txt  ConfigFIleTests.cpp  ConfigFileTests.cpp  TypeToStringFormatterTests.cpp
source/source/: JsonParameterFormatter.cpp  JsonParameterFormatter.h  TypeToStringFormatter.cpp  TypeToStringFormatter.h  configfile.cpp  configfile.h  include_util.cpp  include_util.h
source/source/tests/: CMakeLists.txt  ConfigFIleTests.cpp  ConfigFileIntegrationTests.cpp  IncludeUtilTests.cpp  JsonParameterFormatterTests.cpp  TypeToStringFormatterTests.cpp  UtilFunctionsTests.cpp  conanfile.py
source/source/tests/app-data/GlobalTestProject/: GlobalTestProject.json
